[metadata]
name = scrape_charts
version = 1.0.0
author = Pranit Shah
author_email = pranitpshah@gmail.com
description = Scrape the charts from a website and then process them into either a list, dict, or pandas dataframe.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src